--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.1",
+    "@nuxt-themes/elements": "^0.8.0",
+    "@nuxt-themes/typography": "^0.8.0",
     "@nuxt/content": "^2.4.3",
+    "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.3.0",
     "eslint": "^8.33.0",
     "nuxt": "^3.1.1",
+    "nuxt-icon": "^0.3.2",
     "typescript": "^4.9.5"
   }
 }
