--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@nuxtjs/tailwindcss": "^6.3.0",
     "eslint": "^8.33.0",
     "nuxt": "^3.1.1",
+    "nuxt-headlessui": "^1.1.1",
     "nuxt-icon": "^0.3.2",
+    "nuxt-simple-sitemap": "^1.0.7",
     "typescript": "^4.9.5"
   }
 }
