--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "yarn lint:js",
-    "lint:js": "eslint --ext .ts,.js,.vue --ignore-path .gitignore ."
+    "lint:js": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.35.1",
+    "@antfu/eslint-config": "^0.38.4",
     "@nuxt-themes/elements": "^0.8.0",
     "@nuxt-themes/typography": "^0.8.0",
     "@nuxt/content": "^2.4.3",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.3.0",
     "eslint": "^8.33.0",
-    "nuxt": "^3.1.1",
+    "nuxt": "^3.4.2",
     "nuxt-headlessui": "^1.1.1",
     "nuxt-icon": "^0.3.2",
     "nuxt-simple-sitemap": "^1.0.7",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.3"
   }
 }
