--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.38.4",
+    "@antfu/eslint-config": "^0.38.5",
     "@nuxt-themes/elements": "^0.9.4",
     "@nuxt-themes/typography": "^0.11.0",
-    "@nuxt/content": "^2.4.3",
+    "@nuxt/content": "^2.6.0",
     "@nuxtjs/color-mode": "^3.2.0",
-    "@nuxtjs/tailwindcss": "^6.3.0",
-    "eslint": "^8.33.0",
+    "@nuxtjs/tailwindcss": "^6.6.6",
+    "eslint": "^8.39.0",
     "nuxt": "^3.4.2",
-    "nuxt-headlessui": "^1.1.1",
+    "nuxt-headlessui": "^1.1.4",
     "nuxt-icon": "^0.4.0",
     "nuxt-simple-sitemap": "^2.4.11",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "consola": "3.0.1"
+    }
   }
 }
